<resources>
    <string name="app_name">Time Waiting Counter</string>
    <string name="title">Speed Test</string>
    <string name="timeMove">In Movimento</string>
    <string name="timeStop">Fermo</string>
    <string name="timerChronometerMove">00:00</string>
    <string name="timerChronometerStop">00:00</string>
    <string name="percentMove">% Movimento</string>
    <string name="percentStopping">% Fermo</string>
    <string name="goToResult">Risultati</string>
    <string name="speedometer">50 km/h</string>
    <string name="history">Storico</string>
    <string name="speed_unit_of_measure">Km/h</string>
    <string name="access_fine_location_granted">Autorizzazione concessa per la posizione</string>
    <string name="access_fine_location_denied">Autorizzazione negata per la posizione</string>
    <string name="percentageStopLabel">Percentuale Fermo:</string>
    <string name="percentageStop">0</string>
    <string name="percentageMoveLabel">Percentuale in Movimento:</string>
    <string name="percentageMove">0</string>
    <string name="minutesStopLabel">Tempo Fermo:</string>
    <string name="minutesStop">00:00</string>
    <string name="minutesMoveLabel">Tempo in Movimento:</string>
    <string name="minutesMove">00:00</string>
    <string name="backToHome">Torna alla Home</string>
    <string name="gpsSignal">Gps Signal</string>
    <string name="stop">Stop</string>
    <string name="reload">Reload</string>
    <string name="defaultPercent">0%</string>
    <string name="legendLabel">Km/h / Min.</string>
    <string name="noValueLabel">Non disponibile</string>
    <string name="lowValuesLabel"> &lt; 10 Km/h </string>
    <string name="middleValuesLabel"> &lt; 30 Km/h </string>
    <string name="highValuesLabel"> &gt; 30 Km/h </string>
</resources>
